--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,39 @@
-<router-outlet> </router-outlet>
+
+
+<nav class="navbar">
+    <a class="navbar-brand d-flex" href="#">
+      <img src="../assets/1.avif" width="50" height="50" class="d-inline-block align-top mx-3 cartoon" alt="">
+      <p>Cartoons</p> 
+    </a>
+  </nav>
+  <!-- <app-header></app-header> -->
+  <router-outlet> </router-outlet>
+  <!-- Remove the container if you want to extend the Footer to full width. -->
+<div class="footer">
+
+    <footer class="text-center text-lg-start" style="background-color: #db6930;">
+      <div class="container d-flex justify-content-center py-3">
+        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+          <i class="fab fa-facebook-f"></i>
+        </button>
+        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+          <i class="fab fa-youtube"></i>
+        </button>
+        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+          <i class="fab fa-instagram"></i>
+        </button>
+        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+          <i class="fab fa-twitter"></i>
+        </button>
+      </div>
+  
+      <!-- Copyright -->
+      <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        © 2020 Copyright:
+        <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+      </div>
+      <!-- Copyright -->
+    </footer>
+    
+  </div>
+  <!-- End of .container -->
