--- a/src/app/cartoondetail/cartoondetail.component.html
+++ b/src/app/cartoondetail/cartoondetail.component.html
@@ -8,7 +8,7 @@
          <div class="cartoondata">
           <b>Created By:</b><h3>{{cartoonData.createdby}}</h3>
           <b>Name:</b><h2>{{cartoonData.name}}</h2>
-          <b>Create Date:</b><h4>{{cartoonData.createddate}}</h4>
+          <b>Created Date:</b><h4>{{cartoonData.createddate}}</h4>
           <b>Description:</b><p>{{cartoonData.description}}</p>
          </div>
       <!-- </ng-container> -->
