--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,8 +7,8 @@
     </button>
   </div>
 </div>
-<!-- 
-<div class="data">
+
+<!-- <div class="data">
 <div class="ng-autocomplete">
   <ng-autocomplete
     [data]="this.cartoonData"
@@ -18,6 +18,8 @@
     [itemTemplate]="itemTemplate"
     [notFoundTemplate]="notFoundTemplate"
      >
+    
+
   </ng-autocomplete>
  
 
@@ -29,16 +31,19 @@
     <div [innerHTML]="notFound"></div>
   </ng-template>
 </div>
+</div>
+<div class="searchicon">
+<i class="fa fa-search icon"></i>
 </div> -->
 
 <h1>Trending Cartoons</h1>
 
 <div class="container">
-  <div class="row ">
-    <ng-container *ngFor="let cartoon of cartoonData.slice(0,4) | filter:searchText  | orderBy:'priority'" >
-      <div class=" product card col-md-3 d-flex justify-content-center align-items-center">
-        <a routerLink="/cartoons" routerLinkActive="routerActive"  ></a>
-        <img  src="{{cartoon.imageurl}}" alt="" class="imageone" routerLink="/cartoons" routerLinkActive="routerActive">
+  <div class="row" style="gap:30px">
+    <ng-container *ngFor="let cartoon of cartoonData.slice(0,5) | filter:searchText  | orderBy:'priority' let i=index" >
+      <div class=" product card col-md-2 d-flex justify-content-center align-items-center g-3">
+        <a routerLink="['/cartoons',cartoon.id]" routerLinkActive="routerActive"  ></a>
+        <img  src="{{cartoon.imageurl}}" alt="" class="imageone" routerLink="/cartoons" routerLinkActive="routerActive" (click)="cartoons(cartoon,i)">
       </div>
     </ng-container>
   </div>
